# pixeltable-starter-kit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: config.py  functions.py  main.py  models.py  pxt_serve.py  pyproject.toml  service.toml  setup_pixeltable.py
backend/routers/: agent.py  data.py  search.py
deploy/aws-cdk/: README.md  app.py  requirements.txt
deploy/helm/: README.md
deploy/helm/pixeltable-app/: Chart.yaml  values.yaml
deploy/helm/pixeltable-app/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  schema-init-job.yaml  secret.yaml  service.yaml
deploy/helm/pixeltable-starter/: Chart.yaml  values.yaml
deploy/helm/pixeltable-starter/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
deploy/terraform-aks/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform-gke/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform-k8s/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: DEVELOPER_JOURNEY.md  MIGRATION_PXTFASTAPIROUTER.md
docs/examples/: frontend-pxt-router-client.example.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/lib/: api.ts  hooks.ts
frontend/src/types/: index.ts
orchestration/: README.md  docker-compose.yml  pipeline.py  pyproject.toml
pipeline/: Dockerfile  README.md  docker-compose.yml  pipeline.py  pyproject.toml  sample_batch.json  udfs.py
(+3 files in other folders)
