[project]
name = "pixeltable-starter-kit"
version = "0.1.0"
description = "Full-stack starter app powered by Pixeltable"
requires-python = ">=3.10"
dependencies = [
    "pixeltable>=0.5.19",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "python-multipart",
    "anthropic",
    "openai",
    "sentence-transformers",
    "duckduckgo-search",
    "spacy",
    "tiktoken",
]
